--- a/src/platform/3ds/cia.rsf.in
+++ b/src/platform/3ds/cia.rsf.in
@@ -91,6 +91,7 @@ AccessControlInfo:
   Priority                      : 16
    
   MaxCpu                        : 0x9E # Default
+  CpuSpeed                      : 804mhz
   
   DisableDebug                  : true
   EnableForceDebug              : false
