--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,7 +194,11 @@ endif()
 include(CheckFunctionExists)
 check_function_exists(strdup HAVE_STRDUP)
 check_function_exists(strndup HAVE_STRNDUP)
-check_function_exists(localtime_r HAVE_LOCALTIME_R)
+if(NOT PSP2)
+	check_function_exists(localtime_r HAVE_LOCALTIME_R)
+else()
+	set(HAVE_LOCALTIME_R OFF)
+endif()
 if(NOT CMAKE_SYSTEM_NAME STREQUAL "Generic")
 	check_function_exists(snprintf_l HAVE_SNPRINTF_L)
 	if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
