--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,22 @@
+os:
+  - linux
+  - osx
+
 language: c
 compiler:
   - gcc
   - clang
 
 before_install:
-  - sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
-  - sudo apt-add-repository ppa:zoogie/sdl2-snapshots -y
-  - sudo apt-get update -qq
-  - sudo apt-get purge cmake -qq
-  - sudo apt-get install -y -qq cmake libedit-dev libmagickwand-dev libpng-dev libsdl2-dev libzip-dev
+  - if [ $TRAVIS_OS_NAME -eq "osx"]
+  - then
+  -     brew install qt5 ffmpeg imagemagick sdl2 libzip libpng
+  - else
+  -     sudo add-apt-repository ppa:smspillaz/cmake-2.8.12 -y
+  -     sudo add-apt-repository ppa:zoogie/sdl2-snapshots -y
+  -     sudo apt-get update -qq
+  -     sudo apt-get purge cmake -qq
+  -     sudo apt-get install -y -qq cmake libedit-dev libmagickwand-dev libpng-dev libsdl2-dev libzip-dev
+  - fi
 
 script: mkdir build && cd build && cmake .. && make
