--- a/libretro-build/Makefile.common
+++ b/libretro-build/Makefile.common
@@ -49,6 +49,7 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/gba/context/config.c \
 					$(CORE_DIR)/src/gba/context/sync.c \
 					$(CORE_DIR)/src/gba/context/overrides.c \
+					$(CORE_DIR)/src/platform/libretro/memory.c \
 					$(CORE_DIR)/src/platform/libretro/libretro.c \
 					$(CORE_DIR)/src/third-party/inih/ini.c \
 					$(CORE_DIR)/src/util/formatting.c \
@@ -61,12 +62,6 @@ SOURCES_C :=   $(CORE_DIR)/src/arm/arm.c \
 					$(CORE_DIR)/src/util/circle-buffer.c \
 					$(CORE_DIR)/src/third-party/blip_buf/blip_buf.c \
 					$(CORE_DIR)/src/util/crc32.c
-
-ifeq ($(platform), ctr)
-SOURCES_C += $(CORE_DIR)/src/platform/3ds/3ds-memory.c
-else
-SOURCES_C += $(CORE_DIR)/src/platform/libretro/memory.c
-endif
 
 ifeq ($(HAVE_VFS_FD),1)
 ifeq ($(platform), vita)
